# Security-BO-Agents-Reporting-QA

./: .gitignore  README.md  Reporting_QA_flow.drawio
01_Requirements Definition/: 01_要求定義書_reporting_QA_agent.md  02_業務要件定義書_reporting_QA_agent.md  (+3 more)
03_Implementation/backend/: .dockerignore  Dockerfile  README.md  env.template  pyproject.toml
03_Implementation/backend/app/: __init__.py  config.py  dependencies.py  main.py
03_Implementation/backend/app/crud/: distribution.py  notices.py
03_Implementation/backend/app/db/: models.py  session.py
03_Implementation/backend/app/models/: __init__.py  ai_response.py  escalation.py  final_response.py  inquiry.py  report_meta.py
03_Implementation/backend/app/routers/: __init__.py  ai.py  approvals.py  audits.py  distribution.py  documents.py  drafts.py  escalations.py  inquiries.py  responses.py  workflows.py
03_Implementation/backend/app/schemas/: __init__.py  ai.py  distribution.py  document.py  draft.py  escalation.py  final_response.py  inquiry.py  workflow.py
03_Implementation/backend/app/services/: __init__.py  ai_service.py  audit_service.py  document_service.py  escalation_service.py  inquiry_service.py  response_service.py
03_Implementation/backend/app/utils/: __init__.py  danger_words.py  pdf_parser.py  prompting.py  rag.py
03_Implementation/backend/app/workers/: __init__.py  celery_app.py  tasks.py
03_Implementation/backend/app/workflows/: triage.py
03_Implementation/backend/ca_summary_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
03_Implementation/backend/scripts/: init_db.py
(+42 files in other folders)
