[project]
name = "ca-summary-backend"
version = "0.1.0"
description = "PoC backend for CA summary and notification draft generation"
authors = [{ name = "Security BO Agents" }]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.1",
  "sqlmodel>=0.0.21",
  "pydantic-settings>=2.5.2",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.8"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
